working preset save/load

--- a/css/ui.css
+++ b/css/ui.css
@@ -51,5 +51,10 @@
 }
 
 .ui.icon.button>.icon, .ui.icon.buttons .button>.icon {
-	vertical-align: inherit;
+	vertical-align: middle;
+}
+
+#loadPresetList {
+	max-height: 400px;
+	overflow-y: auto;
 }
