--- a/css/ui.css
+++ b/css/ui.css
@@ -16,6 +16,14 @@ body {
     margin-top: 0px !important;
 }
 
+#progLabel {
+    margin-top: 1rem !important;
+}
+
+#loadProg {
+    margin-bottom: 0.5rem !important;
+}
+
 .ui_pane {
 	display: none;
 }
