QS create and edit

--- a/css/ui.css
+++ b/css/ui.css
@@ -1,9 +1,16 @@
 html {
-  min-width: 780px;
+    background-color: #FF4800;
 }
 
 body {
 	overflow: hidden;
+    min-width: 780px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#sideMenu {
+    /*width: 200px !important;*/
 }
 
 #main_content {
@@ -14,6 +21,8 @@ body {
 
 #main_window {
     margin-top: 0px !important;
+    border-radius: 0px;
+    border: 0px solid transparent;
 }
 
 #progLabel {
@@ -96,6 +105,11 @@ body {
 
 .grabber{
 	cursor: move;
+}
+
+.sort_placeholder {
+    height: 38px;
+    width: 100%;
 }
 
 #queueHeader {
